--- a/Ketch/Base.lproj/Signup.storyboard
+++ b/Ketch/Base.lproj/Signup.storyboard
@@ -71,9 +71,9 @@
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="fontSize">
-                                        <real key="value" value="19"/>
+                                        <real key="value" value="18"/>
                                     </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="fontName" value="TransatTextStandard"/>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="fontName" value="TransatTextMedium"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="isY-Ks-GfE" customClass="DesignableButton" customModule="Ketch" customModuleProvider="target">
@@ -286,8 +286,9 @@
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="fontSize">
-                                        <real key="value" value="21"/>
+                                        <real key="value" value="18"/>
                                     </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="fontName" value="TransatTextMedium"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
                         </subviews>
@@ -385,7 +386,7 @@ Get a date, have fun, and find the One!</string>
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="fontSize">
-                                        <real key="value" value="21"/>
+                                        <real key="value" value="18"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </label>
@@ -547,8 +548,9 @@ Hold tight and you'll be finding the one before you know it.</string>
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="fontSize">
-                                        <real key="value" value="21"/>
+                                        <real key="value" value="18"/>
                                     </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="fontName" value="TransatTextMedium"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NtQ-p1-hGT" customClass="DesignableButton" customModule="Ketch" customModuleProvider="target">
@@ -728,8 +730,9 @@ Hold tight and you'll be finding the one before you know it.</string>
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="fontSize">
-                                        <real key="value" value="21"/>
+                                        <real key="value" value="18"/>
                                     </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="fontName" value="TransatTextMedium"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
                         </subviews>
@@ -824,8 +827,9 @@ Hold tight and you'll be finding the one before you know it.</string>
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="fontSize">
-                                        <real key="value" value="21"/>
+                                        <real key="value" value="18"/>
                                     </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="fontName" value="TransatTextMedium"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
                         </subviews>
@@ -871,6 +875,6 @@ Hold tight and you'll be finding the one before you know it.</string>
         <image name="sprite-sun" width="218" height="186"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="1e8-lw-cNm"/>
+        <segue reference="ssJ-ur-kCT"/>
     </inferredMetricsTieBreakers>
 </document>
